Merged revisions 665699 via svnmerge from https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk
........
  r665699 | maxberger | 2008-06-09 15:15:38 +0100 (Mon, 09 Jun 2008) | 1 line
  
  Replaced LinkedList with generic List interface
........


git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_AFPGOCAResources@665703 13f79535-47bb-0310-9956-ffa450edef68